--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body{
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 7)),url("./assets/image.jpg");
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 7)),url("./assets/top.jpg");
     background-size: cover;
     background-attachment: fixed;
     -moz-background-size: cover;
